<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/topArea"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/shape">

                    <TextView
                        android:id="@+id/myDashboard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/hello"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/dashboard_adminName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/myDashboard"
                        android:layout_alignEnd="@id/myDashboard"
                        android:layout_marginTop="-20dp"
                        android:text="Mr/Mme "
                        android:textColor="#84FFFF"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText,TextContrastCheck" />
                    <TextView
                        android:id="@+id/user_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="28dp"
                        android:text="@string/hello_finally"
                        app:layout_constraintBottom_toTopOf="@+id/logout"
                        app:layout_constraintEnd_toEndOf="@+id/logout"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/logout" />

                    <Button
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="173dp"
                        tools:layout_editor_absoluteY="314dp" />

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginStart="238dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/myDashboard"
                        android:contentDescription="@string/logo_user"
                        app:srcCompat="@drawable/avatar" />
                </RelativeLayout>

                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="381dp"
                    android:layout_height="551dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-80dp"
                    android:padding="5dp"
                    app:columnCount="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="20dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"

                                android:layout_gravity="center_horizontal|center_vertical"
                                android:src="@drawable/facture" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/facture"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="20dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:src="@drawable/notif" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/notifications"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/history"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal|center_vertical"

                                android:src="@drawable/history" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="History"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:src="@drawable/reclam" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="Reclamations"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card5"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal|center_vertical"

                                android:src="@drawable/proxi" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/a_proximit"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card6"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="7dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:src="@drawable/plan" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/planning"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.gridlayout.widget.GridLayout>

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_alignParentBottom="true"
                    app:menu="@menu/bottom_navigation_menu"
                    tools:ignore="ObsoleteLayoutParam" />

            </LinearLayout>

        </ScrollView>

</LinearLayout>
